--- a/benchmarks.html
+++ b/benchmarks.html
@@ -74,6 +74,7 @@ To advance this mission, we develop benchmarks that help researchers conduct fai
 The following benchmarks are currently available:
               </p>
 	      <br>
+<hr class="separation-line">
 <a href="https://github.com/speechbrain/benchmarks/tree/main/benchmarks/MOABB" target="_blank">
     <img src="img/benchmarks/sb-moabb-logo.svg" alt="SpeechBrain-MOABB Logo" style="width: 500px; vertical-align: middle; margin-right: 100px;">
 </a>
@@ -95,13 +96,13 @@ This package facilitates the integration and evaluation of new algorithms (e.g.,
 The package helps integrate and evaluate new audio tokenizers in speech tasks of great interest such as <i>speech recognition</i>,  <i>speaker identification</i>, <i>emotion recognition</i>, <i>keyword spotting</i>, <i>intent classification</i>, <i>speech enhancement</i>, <i>separation</i>, <i>text-to-speech</i>, and many more. 
 <br><br>
 It offers an interface for easy model integration and testing and a protocol for comparing different audio tokenizers.
-  
+ <br><br> 
   Pooneh Mousavi, Luca Della Libera, Jarod Duret, Arten Ploujnikov, Cem Subakan, Mirco Ravanelli, 
   <em>DASB - Discrete Audio and Speech Benchmark</em>, 2024
   arXiv preprint arXiv:2406.14294.
 <a href="https://arxiv.org/abs/2406.14294" target="_blank">[Paper]
 <br><br>
-
+<hr class="separation-line">
 
 
 <p class="justified large"> <a href="https://github.com/speechbrain/benchmarks/tree/main/benchmarks/CL_MASR" target="_blank">CL-MASR</a> 
@@ -118,6 +119,7 @@ An ideal method should achieve both positive forward transfer (i.e. improve perf
 Luca Della Libera, Pooneh Mousavi, Salah Zaiem, Cem Subakan, Mirco Ravanelli, (2024). CL-MASR: A continual learning benchmark for multilingual ASR. <i>IEEE/ACM Transactions on Audio, Speech, and Language Processing, 32</i>, 4931–4944.
 <a href="https://arxiv.org/abs/2310.16931" target="_blank">[Paper]
 <<br><br>
+<hr class="separation-line">
 
 
 <p class="justified large"> <a href="https://github.com/speechbrain/benchmarks/tree/main/benchmarks/MP3S" target="_blank">MP23 - Multi-probe Speech Self Supervision Benchmark</a> aims to evaluate self-supervised representations on various downstream tasks, including <i>ASR</i>, <i>speaker verification</i>, <i>emotion recognition</i>, and <i>intent classification</i>.
@@ -134,6 +136,7 @@ Salah Zaiem,  Youcef Kemiche, Titouan Parcollet, Slim Essid, Mirco Ravanelli, (2
 Salah Zaiem,  Youcef Kemiche, Titouan Parcollet, Slim Essid, Mirco Ravanelli, (2023). Speech self-supervised representations benchmarking: a case for larger probing heads. <i>Computer Speech & Language, 89</i>, 101695.</i>
 <a href="https://www.sciencedirect.com/science/article/pii/S0885230824000780" target="_blank">[Paper]
 <br><br>
+<hr class="separation-line">
 
 
         </section>
