--- a/benchmarks.html
+++ b/benchmarks.html
@@ -82,6 +82,9 @@ The following benchmarks are currently available:
  <br/><br/>
 This package facilitates the integration and evaluation of new algorithms (e.g., a novel deep learning architecture or a novel data augmentation strategy) in standardized EEG decoding pipelines based on MOABB-supported tasks, i.e., motor imagery (MI), P300, and steady-state visual evoked potential (SSVEP). 
  <br/><br/>
+ <b>Reference Papers:</b>
+<br/><br/>		      
+		      
  Davide Borra, Francesco Paissan, and Mirco Ravanelli. <i>SpeechBrain-MOABB: An open-source Python library for benchmarking deep neural networks applied to EEG signals.</i> Computers in Biology and Medicine, Volume 182, 2024. <a href="https://www.sciencedirect.com/science/article/pii/S001048252401182X" target="_blank">[Paper]</a>
  <br/><br/>
  Davide Borra, Elisa Magosso, and Mirco Ravanelli. <i>Neural Networks, Page 106847, 2024. <a href="https://www.sciencedirect.com/science/article/pii/S001048252401182X" target="_blank">[Paper]</a>
@@ -96,7 +99,9 @@ This package facilitates the integration and evaluation of new algorithms (e.g.,
 The package helps integrate and evaluate new audio tokenizers in speech tasks of great interest such as <i>speech recognition</i>,  <i>speaker identification</i>, <i>emotion recognition</i>, <i>keyword spotting</i>, <i>intent classification</i>, <i>speech enhancement</i>, <i>separation</i>, <i>text-to-speech</i>, and many more. 
 <br><br>
 It offers an interface for easy model integration and testing and a protocol for comparing different audio tokenizers.
- <br><br> 
+ <br><br>
+ <b>Reference Paper:</b>
+<br/><br/>	
   Pooneh Mousavi, Luca Della Libera, Jarod Duret, Arten Ploujnikov, Cem Subakan, Mirco Ravanelli, 
   <em>DASB - Discrete Audio and Speech Benchmark</em>, 2024
   arXiv preprint arXiv:2406.14294.
@@ -114,11 +119,13 @@ The goal is to continually learn new languages while limiting forgetting the pre
 
 <br><br>
 An ideal method should achieve both positive forward transfer (i.e. improve performance on new tasks leveraging shared knowledge from previous tasks) and positive backward transfer (i.e. improve performance on previous tasks leveraging shared knowledge from new tasks).
-<br><br>              
+<br><br> 
+<b>Reference Paper:</b>
+<br/><br/>	
 
 Luca Della Libera, Pooneh Mousavi, Salah Zaiem, Cem Subakan, Mirco Ravanelli, (2024). CL-MASR: A continual learning benchmark for multilingual ASR. <i>IEEE/ACM Transactions on Audio, Speech, and Language Processing, 32</i>, 4931–4944.
 <a href="https://arxiv.org/abs/2310.16931" target="_blank">[Paper]
-<<br><br>
+<br><br>
 <hr class="separation-line">
 
 
@@ -128,7 +135,8 @@ The key feature of this benchmark is that it allows users to choose their desire
 <br><br>
 This is why we called it the Multi-probe Speech Self Supervision Benchmark (MP3S). It has been demonstrated that the performance of the model is greatly influenced by this selection
 <br><br>
-
+ <b>Reference Papers:</b>
+<br/><br/>	
               
 Salah Zaiem,  Youcef Kemiche, Titouan Parcollet, Slim Essid, Mirco Ravanelli, (2023). Speech Self-Supervised Representation Benchmarking: Are We Doing it Right? <i>Proceedings of Interspeech 2023</i>
 <a href="https://arxiv.org/abs/2306.00452" target="_blank">[Paper]</a>
