--- a/benchmarks.html
+++ b/benchmarks.html
@@ -129,6 +129,7 @@ Luca Della Libera, Pooneh Mousavi, Salah Zaiem, Cem Subakan, Mirco Ravanelli, (2
 <hr class="separation-line">
 
 
+<h3>MP23 - Multi-probe Speech Self Supervision Benchmark</h3>
 <p class="justified large"> <a href="https://github.com/speechbrain/benchmarks/tree/main/benchmarks/MP3S" target="_blank">MP23 - Multi-probe Speech Self Supervision Benchmark</a> aims to evaluate self-supervised representations on various downstream tasks, including <i>ASR</i>, <i>speaker verification</i>, <i>emotion recognition</i>, and <i>intent classification</i>.
 <br><br>
 The key feature of this benchmark is that it allows users to choose their desired probing head for downstream training. 
