--- a/contributing.html
+++ b/contributing.html
@@ -106,10 +106,10 @@
 </div>
 <ul class="contributors-list">
               <li>Mirco Ravanelli, Concordia University, Mila (CA)</li>
-              <li>Titouan Parcollet, Samsung, Cambridge University (UK)</li>
+              <li>Titouan Parcollet, Samsung Research, University of Cambridge (UK)</li>
               <li>Peter Plantinga, Ohio State University (USA)</li>
 	      <li>Aku Rouhe, Aalto University (FI)</li>
-	      <li>Adel Moumen, Avignon Université (LIA, FR) </li>
+	      <li>Adel Moumen, University of Cambridge (UK) </li>
 	      <li>Sylvain de Langen, Avignon Université (LIA, FR) </li>
 	      <li>Cem Subakan, Mila, Laval University (CA)</li>
 	      <li>Luca Della Libera, Concordia  University, Mila (CA)</li>
