Fix: Discord badge image not displaying on website

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 						<div class="col-lg-7">
 							<div class="banner_content">
 								<h2>SpeechBrain <br /></h2>
-                <h3>Open-Source Conversational AI for Everyone</h3>
+                                <h3>Open-Source Conversational AI for Everyone</h3>
 								<a class="banner_btn" href="https://speechbrain.readthedocs.io/">Get Started</a>
 								<a class="banner_btn2" href="https://github.com/speechbrain/speechbrain">GitHub</a>
 								<a class="banner_btn4" href="https://huggingface.co/speechbrain"><img src="img/hf.svg" style="width:40px"/></a>
@@ -84,18 +84,30 @@
 							</div>
 						</div>
 					</div>
-                    <div class="row">
-                        <div class="col-lg-4" style="margin-top: 8px;">
-                            <iframe src="https://ghbtns.com/github-btn.html?user=speechbrain&repo=speechbrain&type=star&count=true&size=large&v=2" frameborder="0" scrolling="0" width="170" height="30" title="GitHub"></iframe>
-                            <a href="https://discord.gg/3wYvAaz3Ck"><img style="margin-top: -30px; margin-left: -15px" src="https://dcbadge.vercel.app/api/server/3wYvAaz3Ck?style=flat" /></a>
-                        </div>
-
-                    </div>
-                   
-				</div>
-
+				<div class="row">
+					<div class="col-lg-4" style="margin-top: 8px;">
+						<div style="display: flex; align-items: center; flex-wrap: wrap;">
+							<iframe src="https://ghbtns.com/github-btn.html?user=speechbrain&repo=speechbrain&type=star&count=true&size=large&v=2"
+									frameborder="0"
+									scrolling="0"
+									width="170"
+									height="30"
+									title="GitHub">
+							</iframe>
+						
+							<!-- Custom Discord Button -->
+							<a href="https://discord.gg/3wYvAaz3Ck" class="discord-btn">
+								<svg width="16" height="16" viewBox="0 0 16 16" fill="currentColor">
+									<path d="M13.545 2.907a13.227 13.227 0 0 0-3.257-1.011.05.05 0 0 0-.052.025c-.141.25-.297.577-.406.833a12.19 12.19 0 0 0-3.658 0 8.258 8.258 0 0 0-.412-.833.051.051 0 0 0-.052-.025c-1.125.194-2.22.534-3.257 1.011a.041.041 0 0 0-.021.018C.356 6.024-.213 9.047.066 12.032c.001.014.01.028.021.037a13.276 13.276 0 0 0 3.995 2.02.05.05 0 0 0 .056-.019c.308-.42.582-.863.818-1.329a.05.05 0 0 0-.01-.059.051.051 0 0 0-.018-.011 8.875 8.875 0 0 1-1.248-.595.05.05 0 0 1-.02-.066.051.051 0 0 1 .015-.019c.084-.063.168-.129.248-.195a.05.05 0 0 1 .051-.007c2.619 1.196 5.454 1.196 8.041 0a.052.052 0 0 1 .053.007c.08.066.164.132.248.195a.051.051 0 0 1-.004.085 8.254 8.254 0 0 1-1.249.594.05.05 0 0 0-.03.03.052.052 0 0 0 .003.041c.24.465.515.909.817 1.329a.05.05 0 0 0 .056.019 13.235 13.235 0 0 0 4.001-2.02.049.049 0 0 0 .021-.037c.334-3.451-.559-6.449-2.366-9.106a.034.034 0 0 0-.02-.019z"/>
+								</svg>
+								Discord
+							</a>
+						</div>
+					</div>
+				</div>                  
+			</div>
       </div>
-        </section>
+</section>
         <!--================End Home Banner Area =================-->
 
 <div class="alert alert-primary" role="alert" style="text-align: center; font-size: 24px;">
